[gd_scene load_steps=7 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://RocketShip.png" type="Texture" id=2]
[ext_resource path="res://RocketShipLaunch.png" type="Texture" id=3]
[ext_resource path="res://LaunchButton.png" type="Texture" id=4]
[ext_resource path="res://ResetButton.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Launch"
tracks/0/type = "value"
tracks/0/path = NodePath("RockteShipLaunch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 502, 550 ), Vector2( 502, -110 ) ]
}

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RockteShipIdle" type="Sprite" parent="."]
position = Vector2( 502, 534 )
texture = ExtResource( 2 )

[node name="RockteShipLaunch" type="Sprite" parent="."]
position = Vector2( 505.364, -110 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Launch = SubResource( 1 )

[node name="LaunchButton" type="TextureButton" parent="."]
margin_left = 869.741
margin_top = 540.23
margin_right = 917.741
margin_bottom = 556.23
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="TextureButton" parent="."]
margin_left = 60.0
margin_top = 540.359
margin_right = 157.0
margin_bottom = 572.359
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LaunchButton" to="." method="_on_LaunchButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
